<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HoGo</string>
    <string name="action_settings">Settings</string>
    <string name="action_upload">Upload</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_document">Send Document</string>
    <string name="my_document">My Document</string>
    <string name="send_history">Send History</string>
    <string name="preview_text">Document Preview</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_preview">Document Preview</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_start_screen">HoGo Sender</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_scan_settings">Scan Settings</string>
    <string name="title_activity_send_settings">Send Settings</string>
    <string name="title_activity_address_book">Address book</string>
    <string name="title_activity_send_history">Send History</string>
    <string name="define_first_name">First Name</string>
    <string name="define_last_name">Last Name</string>
    <string name="define_company">Company Name</string>
    <string name="define_email">E-mail</string>
    <string name="define_select">Select</string>
    <string name="title_login">Login</string>
    <string name="title_send">Send</string>
    <string name="title_history">History</string>

</resources>